force-app/main/default/objects/CustomerOrgActivity__e/CustomerOrgActivity__e.object-meta.xml
<CustomObject>
    <label>CustomerOrgActivity</label>
    <pluralLabel>CustomerOrgActivities</pluralLabel>
</CustomObject>