force-app/main/default/objects/CustomerOrgActivity__e/fields/OrgId__c.field-meta.xml
<CustomField>
    <fullName>OrgId__c</fullName>
    <label>Org Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>