force-app/main/default/objects/CustomerOrgActivity__e/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type values: 
Event
Subscription</description>
    <label>Type</label>
    <length>32</length>
    <type>Text</type>
</CustomField>